# PyRM

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml   CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  index.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  keylabeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  BUG_REPORT.yaml  BUG_REPORT.yml  DOCUMENTATION.md  DOCUMENTATION.yml  FEATURE_REQUEST.md  FEATURE_REQUEST.yml  QUESTION.md  QUESTION.yml  config.yml
.github/workflows/: codeql-analysis.yml  dependabot.yml  linter.yml  stack-linter.yml  stale.yml  test-and-build.yml
.github/workflows/HOLDING/: automerge-dependabot.yml.hold
doc/: RELEASE_WORKFLOW.md  architecture.drawio
docs/: index.md
pyrm/: pyrm.py
src/: app.py  pyrm.py
src/logger/: __init__.py  logger.py
src/module/: __init__.py  module.py  module_multiply_test.py
src/mypackage/: module.py
tests/: __init__.py  test_module_multiply.py  test_pyrm_sum.py
