[tool.poetry]
name = "pyrm"
version = "0.1.0"
description = "Python Personal Relationship Management"
authors = ["Bryan Jenks <bryanjenks@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.8.0"
pre-commit = "^2.13.0"
virtualenv = "^20.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
