[tool.poetry]
name = "pyrm"
version = "0.1.0"
description = "Python Personal Relationship Management"
authors = ["Bryan Jenks <bryanjenks@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-azurepipelines = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip_glob = [ "docs", "notes" ]
known_third_party = ["logger", "module", "pytest", "rich"]

[tool.vulture]
exclude = []
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["src/"]
sort_by_size = true
verbose = false
